--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script
+    <!-- <script
       src="https://static.elfsight.com/platform/platform.js"
       async
-    ></script>
+    ></script> -->
   </body>
 </html>
